# goodpod

./: Cargo.toml  README.md
src/: language.rs  lib.rs  rss.rs
src/ns/: itunes.rs  podcast.rs
tests/: tests.rs
tests/data/: complex-feed.xml  publisher-feed.xml  simple-feed.xml
