[package]
authors = ["RSS Blue", "Dovydas Joksas"]
categories = ["encoding"]
edition = "2021"
keywords = ["podcast", "rss", "xml"]
license = "MIT OR Apache-2.0"
name = "goodpod"
readme = "README.md"
repository = "https://github.com/rssblue/goodpod"
version = "0.1.0"

[dev-dependencies]
pretty_assertions = "1.4.0"

[lib]
doctest = false

[dependencies]
chrono = "0.4.38"
strum = "0.26.2"
strum_macros = "0.26.3"
url = "2.5.0"
uuid = {version="1.8.0", features=["serde"]}
xml = "0.8.20"
yaserde = {version="0.10.0"}
yaserde_derive = "0.10.0"
