[package]
authors = ["RSS Blue", "Dovydas Joksas"]
categories = ["encoding"]
edition = "2021"
keywords = ["podcast", "rss", "xml", "podcasting2"]
license = "MIT OR Apache-2.0"
name = "goodpod"
readme = "README.md"
repository = "https://github.com/rssblue/goodpod"
version = "0.1.1"
description = "A crate for generating Podcasting 2.0 feeds."

[dev-dependencies]
pretty_assertions = "1.4.0"

[lib]
doctest = false

[dependencies]
chrono = "0.4.38"
strum = {version="0.26.3", features=["derive"]}
url = "2.5.2"
uuid = {version="1.10.0", features=["serde"]}
xml = "0.8.20"
yaserde = {version="0.10.1"}
yaserde_derive = "0.10.1"
